Bug 1119057 - Scrollbar position should follow the document 'dir'. r=timdream
UltraBlame original commit: 12391199c45fabc04d0efb3b1f4ef525febf632c

--- a/b2g/chrome/content/content.css
+++ b/b2g/chrome/content/content.css
@@ -36,6 +36,13 @@ xul|scrollbar[orient="vertical"] {
   max-width: 8px;
 }
 
+
+
+[dir="rtl"] xul|scrollbar[root="true"][orient="vertical"] {
+  -moz-margin-start: unset;
+  margin-right: -8px;
+}
+
 xul|scrollbar[orient="vertical"] xul|thumb {
   max-width: 6px !important;
   min-width: 6px !important;
